--- a/styles/styles.css
+++ b/styles/styles.css
@@ -10,5 +10,5 @@
 @import "footer.css";
 /* Подключение стилей относящихся к main */
 @import "main.css";
-@import "madia.css";
+@import "media.css";
 @import "preloader.css";
